Updated debian files

--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,9 @@ Source: lliurex-shutdowner
 Section: admin
 Priority: optional
 Maintainer: Equipo LliureX <lliurex@gva.es>
-Uploaders: Angel Berlanas Vicente <lliurex_devel2@edu.gva.es>, Raul Rodrigo Segura <lliurex_devel3@edu.gva.es>,  David Montalva Furio <montalva_dav@gva.es>, Hector Garcia Huerta <lliurex_devel1@edu.gva.es>, Daniel Duran Vecino <daduve@gmail.com>, M.Angel Juan <m.angel.juan@gmail.com>
-Build-Depends: debhelper (>= 7.0), llxcfg-dev, zero-dev, llxsrchelper
-Standards-Version: 3.9.5
+Uploaders: Equipo LliureX <lliurex@gva.es>
+Build-Depends: debhelper (>= 10),zero-dev,llxsrchelper,python3-poinstaller
+Standards-Version: 4.1.2
 
 Package: lliurex-shutdowner
 Architecture: all
