Fixed valencian translations

--- a/llx-resources/lliurex-shutdowner/desktops/lliurex-shutdowner.desktop
+++ b/llx-resources/lliurex-shutdowner/desktops/lliurex-shutdowner.desktop
@@ -5,12 +5,15 @@ Name[es]=Lliurex Shutdowner
 Name[qcv]=Lliurex Shutdowner
 Name[ca_ES@valencia]=Lliurex Shutdowner
 Name[ca_ES.UTF-8@valencia]=Lliurex Shutdowner
+Name[ca_ES]=Lliurex Shutdowner
+Name[ca]=Lliurex Shutdowner
 TryExec=/usr/sbin/lliurex-shutdowner
 Comment=Shutdown program for the classroom
 Comment[qcv]=Programa la desconnexió dels clients de l'aula
 Comment[ca_ES@valencia]=Programa la desconnexió dels clients de l'aula
 Comment[ca_ES.UTF-8@valencia]=Programa la desconnexió dels clients de l'aula
-Comment[ca_ES]=Programa la desconnexió dels clients de l'aulala
+Comment[ca_ES]=Programa la desconnexió dels clients de l'aula
+Comment[ca]=Programa la desconnexió dels clients de l'aula
 Comment[es]=Programa la desconexión de los clientes del aula
 StartupNotify=true
 Exec=/usr/sbin/lliurex-shutdowner
