--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 4.1.2
 
 Package: lliurex-shutdowner
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, python, python3
 Description: LliureX Shutdowner
  Manage automatic clients shutdown using n4d calls.
  Server should have n4d-shutdowner-server installed, clients n4d-shutdown-client
@@ -16,7 +16,7 @@ Description: LliureX Shutdowner
 
 Package: lliurex-shutdowner-common
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, python, python3
 Description: LliureX Shutdowner common files
  Lliurex Shutdowner common support files.
 
