--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 4.1.2
 
 Package: lliurex-shutdowner
 Architecture: all
-Depends: ${misc:Depends}, python3
+Depends: ${misc:Depends}, python3,python3-shiboken2, python3-pyside2.qtcore,python3-pyside2.qtqml, python3-pyside2.qtquick, python3-pyside2.qtgui, python3-pyside2.qtwidgets, python3-pyside2.qtquickwidgets, python3-pyside2.qtnetwork
 Description: LliureX Shutdowner
  Manage automatic clients shutdown using n4d calls.
  Server should have n4d-shutdowner-server installed, clients n4d-shutdown-client
@@ -16,7 +16,7 @@ Description: LliureX Shutdowner
 
 Package: lliurex-shutdowner-common
 Architecture: all
-Depends: ${misc:Depends}, python3
+Depends: ${misc:Depends}, python3,python3-shiboken2, python3-pyside2.qtcore,python3-pyside2.qtqml, python3-pyside2.qtquick, python3-pyside2.qtgui, python3-pyside2.qtwidgets, python3-pyside2.qtquickwidgets, python3-pyside2.qtnetwork
 Description: LliureX Shutdowner common files
  Lliurex Shutdowner common support files.
 
